# baxi

./: .coverage  .dockerignore  .env.example  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  README.md  README_RUNBOOK.md  SECURITY_AUDIT_REPORT.md  build_data_model.py  docker-compose.yml  explore_data.py  generate_docs.py  go.mod  go.sum  phase3_overall_business_analysis.py  phase4_fulfillment_experience_analysis.py  phase5_marketing_funnel_analysis.py  phase5_quality_revision.py  phase7_calibration_revision.py  phase7_simulation_engine.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.codegraph/: daemon.pid
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.sisyphus/: boulder.json  prometheus-code-review-fixes.md  v0.3.1-acceptance.md
.specify/: feature.json
adapters/: base.py  feishu_adapter.py  github_issue_adapter.py  local_cli_adapter.py  manual_adapter.py
api/: AGENTS.md  auth.py  dependencies.py  errors.py  logging_config.py  main.py  schemas.py  schemas_qoder.py
config/: AGENTS.md  access_policy.yml  action_registry.yml  aip_object_schema.yml  aip_object_schema_v2.yml  context_recipes.yml  data_markings.yml  data_quality_rules.yml  feishu_base_schema.yml  feishu_field_mapping.yml  feishu_table_ids.yml  feishu_table_ids.yml.example  feishu_user_mapping.yml  llm_config.yml  metric_definitions.yml  metrics.yml  owner_mapping.yml  retention_policies.yml
core/: config.py
doc/: 数据分析.md
docs/: API_REFERENCE.md  aip_feishu_integration.md  (+38 more)
(+1100 files in other folders)
